# WatchWork

./: .gitignore  LICENSE  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/app/: auth.py  config.py  database.py  deps.py  events.py  exceptions.py  logging_config.py  main.py  middleware.py  models.py  schemas.py  worker.py
apps/api/app/routers/: auth.py  content.py  jobs.py  settings.py  tasks.py  webhooks.py
apps/api/app/services/: planner.py  progress.py  security.py  transcripts.py  users.py  webhook_delivery.py
apps/api/tests/: conftest.py  test_auth.py  test_content.py  test_jobs.py  test_security.py  test_settings.py  test_webhooks.py
apps/extension/: content-script.js  manifest.json  options.html  options.js  popup.css  popup.html  popup.js
apps/web/: Dockerfile  middleware.ts  package.json  tailwind.config.ts
apps/web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/app/content/[id]/: loading.tsx  page.tsx
apps/web/app/dashboard/: loading.tsx  page.tsx
apps/web/app/login/: page.tsx
apps/web/app/settings/: page.tsx  settings-form.tsx
apps/web/components/: content-card.tsx  process-button.tsx  shell.tsx  status-badge.tsx  task-list.tsx
apps/web/lib/: api.ts  auth-context.tsx  auth.ts
apps/web/public/: sitemap.xml
docs/: ARCHITECTURE.md  GOOGLE_AUTOMATION.md  LOCAL_RUNBOOK.md  PRODUCT_SPEC.md
